--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "adoutils"
-version = "0.2.0"
+version = "0.1.0"
 authors = [
-    { name="Gonzalo Pincheira", email="g.pincheira.a@gmail.com" },
+    { name="Manuel Barrera", email="manubarrerazurita@gmail.com" },
 ]
 description = "A small example package"
 readme = "README.md"
@@ -21,5 +21,5 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/gpincheiraa/ado-utils"
-"Bug Tracker" = "https://github.com/gpincheiraa/ado-utils/issues"
+"Homepage" = "https://github.com/sovieeet/ado-utils-python-package-"
+"Bug Tracker" = "https://github.com/sovieeet/ado-utils-python-package-/issues"
